bugs about dark mode was fixed

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,9 +1,8 @@
 .header-component {
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    width: 80%;
+    width: 100%;
     padding: 40px 40px;
-    height: 20%;
     align-self: center;
     @media only screen and (max-width: 425px) {
         width: 100%;
@@ -11,7 +10,7 @@
     }
     .header-list {    
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         .header-left-side {
             font-weight: bold;
