--- a/src/components/profile/style.scss
+++ b/src/components/profile/style.scss
@@ -1,7 +1,7 @@
 .profile{
     display: flex;
     flex-direction: row;
-    margin-bottom: 1%;
+    margin-bottom: 1rem;
     img {
       border-radius: 50%;
       height:120px;
